force-app/main/default/objects/Course__c/fields/Average_Salary__c.field-meta.xml
<CustomField>
    <fullName>Average_Salary__c</fullName>
    <label>Average Salary</label>
    <length>40</length>
    <type>Text</type>
</CustomField>