force-app/main/default/objects/Course__c/fields/School_Category__c.field-meta.xml
<CustomField>
    <fullName>School_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Course</relationshipLabel>
    <relationshipName>Course</relationshipName>
    <type>Lookup</type>
</CustomField>