force-app/main/default/objects/Course__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>School__c</referenceTo>
    <relationshipLabel>Course</relationshipLabel>
    <relationshipName>Course</relationshipName>
    <type>Lookup</type>
</CustomField>